# mermex

./: .gitignore  README.md  checksum-Elixir.Mermex.exs  mix.exs
.github/workflows/: ci.yml  release.yml
lib/: mermex.ex
native/mermex_nif/: Cargo.toml
native/mermex_nif/src/: lib.rs
test/: mermex_test.exs
